engine/codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_daemon_start_failed.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 401
expression: rendered
---
■ Failed to start the background server: The host does not allow detached processes
