engine/codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  3\"),\n&normalized_project_group).replace(&project, \"/tmp/project\")"
---
  Agent command center  Group: Project  g
   All 3   Needs you 1   Working 1   Ready 0   Inactive 1                      tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                           │ Task details
  /tmp/project  3                                     │
  › ● Build the dashboard                             │ Build the dashboard
    ● Repair authentication                           │ ● Needs input
    ○ Review yesterday's changes                      │
                                                      │ Model: gpt-6.1-sol
                                                      │ Reasoning: Unknown
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │
                                                      │ Agent: Inspect keyboard shortcuts
                                                      │ Open task to review.
                                                      │ Waiting for approval.
                                                      │
                                                      │ Prompt
                                                      │ Build the dashboard
                                                      │
                                                      │
                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
