engine/codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_attach_conflict.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
  🔒   This conversation is open in another app                                      r to retry
      Close it there and press R to continue here.

   r retry   f fork   ←/esc command center   ⌃c/q exit   ⌃t transcript
