engine/codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_live_activity.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  1\"),\n&normalized_group).replace(&project, \"/tmp/project\")"
---
  Agent command center  Group: Project  g
   All 1   Needs you 0   Working 1   Ready 0   Inactive 0                      tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                           │ Task details
  /tmp/project  1                                     │
  › ● Check startup performance                       │ Check startup performance
                                                      │ ● Working
                                                      │
                                                      │ Model: Unknown
                                                      │ Reasoning: Unknown
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │
                                                      │ Latest activity
                                                      │ Checking cold-start regressions
                                                      │
                                                      │ Prompt
                                                      │ No prompt available.
                                                      │
                                                      │
                                                      │
                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
